--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,37 @@ a#scrollUp i{
   background-position: 130px;
 }
 
+.log_in input {
+  background: #00bf20;
+  border: medium none;
+  color: #B2B2B2;
+  font-family: 'roboto';
+  font-size: 12px;
+  font-weight: 300;
+  height: 35px;
+  outline: medium none;
+  padding-left: 10px;
+  width: 155px;
+  background-image: url(../images/home/sesion.png);
+  background-repeat: no-repeat;
+  background-position: 130px;
+}
+.log_out input {
+
+  background: #ea0c00;
+  border: medium none;
+  color: #B2B2B2;
+  font-family: 'roboto';
+  font-size: 12px;
+  font-weight: 300;
+  height: 35px;
+  outline: medium none;
+  padding-left: 10px;
+  width: 155px;
+  background-image: url(../images/home/sesion.png);
+  background-repeat: no-repeat;
+  background-position: 130px;
+}
 
 /*  Dropdown menu*/
 
